<resources>
    <string name="app_name">BasicLab</string>
    <string name="action_settings">Settings</string>
    <string name="about">Action 1</string>
    <string name="help">Action 2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="fragment1">First Fragment</string>
    <string name="fragment2">Second Fragment</string>
    <string name="fragment3">Third Fragment</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>