<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.lab5.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:title="@string/about"
        android:id="@+id/about"
        />

    <item
        android:id="@+id/help"
        android:title="@string/help" />

    <item
        android:id="@+id/fragment1"
        android:title="@string/fragment1" />

    <item
        android:id="@+id/fragment2"
        android:title="@string/fragment2" />

    <item
        android:id="@+id/fragment3"
        android:title="@string/fragment3" />
</menu>